[package]
name = "motd"
version = "1.3.1"
authors = ["desbma <desbma@users.noreply.github.com>"]
description = "Dynamically generate Linux MOTD SSH banner"
license = "GPL-3.0-only"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
serial_test = { version = "3.1.1", default-features = false }

[dependencies]
ansi_term = { version = "0.12.1", default-features = false }
anyhow = { version = "1.0.89", default-features = false, features = ["std", "backtrace"] }
clap =  { version = "3.2.25", default-features = false, features = ["std", "color"] }
itertools =  { version = "0.13.0", default-features = false, features = ["use_std"] }
libc =  { version = "0.2.159", default-features = false }
num_cpus =  { version = "1.16.0", default-features = false }
regex = { version = "1.11.0", default-features = false, features = ["std"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
serde_regex = { version = "1.1.0", default-features = false }
termsize =  { version = "0.1.9", default-features = false }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
walkdir = { version = "2.5.0", default-features = false }
xdg = { version = "2.5.2", default-features = false }
