[package]
name = "motd"
version = "1.3.2"
authors = ["desbma <desbma@users.noreply.github.com>"]
description = "Dynamically generate Linux MOTD SSH banner"
license = "GPL-3.0-only"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-tiny]
inherits = "release"
opt-level = "z"

[dev-dependencies]
serial_test = { version = "3.2.0", default-features = false }

[dependencies]
ansi_term = { version = "0.12.1", default-features = false }
anyhow = { version = "1.0.98", default-features = false, features = ["std", "backtrace"] }
clap =  { version = "3.2.25", default-features = false, features = ["std", "color"] }
itertools =  { version = "0.14.0", default-features = false, features = ["use_std"] }
libc =  { version = "0.2.174", default-features = false }
num_cpus =  { version = "1.17.0", default-features = false }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
serde_regex = { version = "1.1.0", default-features = false }
termsize =  { version = "0.1.9", default-features = false }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
walkdir = { version = "2.5.0", default-features = false }
xdg = { version = "3.0.0", default-features = false }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
unnecessary_debug_formatting = "allow"
# below lints are from clippy::restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# indexing_slicing = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
# redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
# unwrap_used = "warn"
verbose_file_reads = "warn"
